/*
 * $Id: ChangeLog,v 1.6419 2009/04/16 21:57:18 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-04-17 02:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rdd/wafunc.c
    ! Fixed an error handling issue from my last commit.

2009-04-17 01:55 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rdd/wafunc.c
    ! Fixed segfault on accessing work area by alias in MT mode both with
      shared and private workareas. Allocate thread-specific alias dynsyms
      only with SET WORKAREA PRIVATE.

2009-04-16 19:23 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * tests/scope1.prg
    * Made the test pass on Harbour by including MODULE FRIENDLY clause.
  (by Przemyslaw Czerpak)

2009-04-16 18:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/hbcurl/hbcurl.c
  * contrib/hbmzip/hbmzip.c
  * contrib/hbzlib/zip.c
  * contrib/hbzlib/zipnew.cpp
  * contrib/libnf/fttext.c
  * contrib/rdd_ads/ads1.c
  * contrib/unicode/hbcc.prg
  * contrib/unicode/hbcx.c
  * contrib/unicode/hbencode.c
  * include/hbapifs.h
  * include/hbdbsort.h
  * include/hbset.h
  * source/common/hbfsapi.c
  * source/common/hbwince.c
  * source/compiler/genc.c
  * source/compiler/gencobj.c
  * source/compiler/genhrb.c
  * source/compiler/genobj32.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
  * source/compiler/hbpcstat.c
  * source/ct/disk.c
  * source/ct/files.c
  * source/pp/ppcore.c
  * source/pp/ppgen.c
  * source/rdd/dbf1.c
  * source/rdd/delim1.c
  * source/rdd/sdf1.c
  * source/rdd/bmdbfcdx/bmdbfcdx1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbffpt/dbffpt1.c
  * source/rdd/dbfnsx/dbfnsx1.c
  * source/rdd/dbfntx/dbfntx1.c
  * source/rdd/hbsix/sxfname.c
  * source/rdd/hbsix/sxsem.c
  * source/rdd/hsx/hsx.c
  * source/rtl/defpath.c
  * source/rtl/direct.c
  * source/rtl/filebuf.c