@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6419 2009/04/16 21:57:18 likewolf Exp $
+ * $Id: ChangeLog,v 1.6420 2009/04/16 22:51:24 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-04-17 08:54 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
+  * bin\pack_bin.bat
+    + Added missing hbrun.exe and xbscript.exe
+  * bin\pack_src.bat
+    + Added missing makefiles and pcre files
+
+  * include\hbclass.ch
+    ! Fixed typo (duplicate Self declaration in EXTEND [TYPE] rule
+  * include\hbexpra.c
+    ! Fixed to allow creation of literal hashes with more than 127 entries
 
 2009-04-17 02:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * source/rdd/wafunc.c
